--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="KWDB Playground是一个本地离线交互式数据库学习平台，提供Shell和SQL双终端环境，支持容器化课程实践。" />
     <meta name="keywords" content="KWDB,数据库,学习平台,SQL,Shell,容器化,交互式教学" />
     <meta name="author" content="KWDB Team" />
-    <title>KWDB Playground - 交互式数据库学习平台</title>
+    <title>KWDB Playground - 交互式学习平台</title>
     <script type="module">
       if (import.meta.hot?.on) {
         import.meta.hot.on('vite:error', (error) => {
