feat(ui): 更新品牌视觉和课程卡片交互样式
- 将 favicon 和导航栏图标替换为新品牌 logo，并更新主题色
- 优化 ProposeCourseCard 的视觉反馈，添加悬停动画和边框样式
- 增强 CourseList 中课程卡片的视觉层次，为运行中/已暂停状态添加动态指示器
- 统一卡片圆角、内边距和过渡动画，提升整体视觉一致性

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Favicon 配置：SVG 优先，ICO 兼容 -->
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any" />
+    <!-- Favicon 配置：使用 logo.svg -->
+    <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" sizes="any" />
     <link rel="alternate icon" href="/favicon.ico" sizes="any" />
     <!-- Safari Pinned Tab（使用 SVG，需指定颜色） -->
-    <link rel="mask-icon" href="/favicon.svg" color="#0ea5e9" />
+    <link rel="mask-icon" href="/assets/logo.svg" color="#5e6ad2" />
     <!-- 主题色（影响移动端地址栏颜色） -->
     <meta name="theme-color" content="#0ea5e9" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
